<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/scanCreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:text="Scan Credit Card"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/scanCreditCard"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="27dp"
            android:text="Cardholder Name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="25dp"
            android:text="Card Number"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="22dp"
            android:text="Exp Date"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expDate"
            android:layout_marginTop="32dp"
            android:layout_toLeftOf="@+id/expDate"
            android:layout_toStartOf="@+id/expDate"
            android:text="Security Code"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/processPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/scanCreditCard"
            android:layout_alignStart="@+id/scanCreditCard"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="34dp"
            android:text="Process Payment"/>

        <EditText
            android:id="@+id/cardholderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:inputType="none"
            android:text="                                      "/>

        <EditText
            android:id="@+id/cardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView5"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:inputType="none"
            android:text="                                      "/>

        <EditText
            android:id="@+id/expDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cardNumber"
            android:layout_alignStart="@+id/cardNumber"
            android:layout_alignTop="@+id/textView5"
            android:inputType="none"
            android:text="                                      "/>

        <EditText
            android:id="@+id/securityCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/processPayment"
            android:layout_toEndOf="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:inputType="none"
            android:text="                                      "/>

        <TextView
            android:id="@+id/transactionFailure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/processPayment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="Error Message Area"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </RelativeLayout>

</LinearLayout>