...
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Total Price for Items"
                />

            <EditText
                android:id="@+id/priceOfItemsSoldEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:width="50dp"
                android:ems="10"
                android:inputType="numberDecimal"/>
...

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/chargeCreditCardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableLayout"
                android:layout_centerHorizontal="true"
                android:layout_span="3"
                android:text="Charge Credit Card"/>
...
