...
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Add New Customer"/>

    <Button
        android:id="@+id/lookupCustomerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addNewCustomerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Lookup Customer"/>
...
